<resources>
    <string name="app_name">21Q4_App_Projekt</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Registrieren</string>
    <string name="btn_continue">Weiter</string>
    <string name="edt_email">Email</string>
    <string name="edt_username">Benutzername</string>
    <string name="tv_title">MyDoz</string>
    <string name="edt_password">Passwort</string>
    <string name="edt_password_proof">Passwort bestätigen</string>
    <string name="iv_logo_content">logo</string>
    <string name="error_no_username">Benutzername eingeben</string>
    <string name="error_no_password">Password eingeben</string>
    <string name="error_wrong_password_username">Falsches Passwort oder Benutzername</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="set_password">Set Password</string>
    <string name="full_name">Vorname Nachname</string>
    <string name="street">Straße</string>
    <string name="email">E-mail</string>
    <string name="postalCode">Postleitzahl</string>
    <string name="housenumber">Hausnummer</string>
    <string name="password">Passwort</string>
    <string name="city">Stadt</string>
    <string name="sign_in">Einloggen</string>
    <string name="don_t_have_an_account">Keinen Account?</string>
    <string name="sign_up">Registrieren</string>
    <string name="search">Dozenten suchen</string>
    <string name="personalData">Persönliche Daten</string>
    <string name="orderOverview">Bestellübersicht</string>
    <string name="searchResul">564 Dozenten gefunden</string>
    <string name="departmentPicker">Fachbereiche</string>
    <string name="circlingPicker">Umkreis</string>
    <string name="enteryourname">Namen eingeben</string>
    <string name="validemail">Eine valide E-Mail eingeben</string>
    <string name="validpassword">Ein valides Passwort eingeben</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="forgot_password">vergessen ?  </string>
    <string name="by_using_this_ui_ux_you_agree">by using this ui/ux you agree to our</string>
    <string name="title_activity_sign_up">Registrieren</string>
    <string name="privacypolicyterms">

        <b>FREE</b> \nEach download allows the buyer to use the product for personal use only. You’ll need to purchase a commercial license if you’re not willing to make the modified version public. \n\n

        <b>SINGLE</b> \nEach purchase allows the buyer to use the product, for one project and for commercial use but end users cannot be charged for. This license allows you to keep your project private and use it in only one project.\n\n

        <b>EXTENDED</b> \nEach purchase allows the buyer to use the product, for an unlimited amount of projects, for commercial use, within the same company.\n\n

    </string>
    <string name="OK">OK</string>
    <string name="orsigninusing">oder einloggen mit</string>
    <string name="orsignupusing">oder registrieren mit</string>
    <string name="aboutyou">Über dich</string>
    <string name="address">Adresse</string>
    <string name="uploadphoto">Upload your best recent picture</string>
    <string name="pickYourDate">Pick your date of birth</string>
    <string name="username">Benutzername</string>
    <string name="iam">Ich bin</string>
    <string name="validusername">Benutzernamen eingeben</string>
    <string name="designed">Designed by \n matirialuiux.com</string>
</resources>