<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:clipToPadding="false"
    android:contentDescription="For more visit www.materialuiux.com"
    tools:context="classy.SignUpActivity"
    tools:ignore="HardcodedText">

    <fontsmaterialuiux.cairoTextView
        android:id="@+id/id_SignIn_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="76dp"
        android:contentDescription="For more visit www.materialuiux.com"
        android:text="@string/sign_in"
        android:textColor="@color/signupsignintextcolor"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <!-- Sign In Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_SignUP_TextView"
        android:layout_below="@+id/id_SignIn_TextView"
        android:layout_gravity="center"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/rect"
        android:contentDescription="For more visit www.materialuiux.com"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_Email_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="33dp"
            android:layout_marginRight="23dp"
            android:background="@null"
            android:contentDescription="For more visit www.materialuiux.com"
            tools:ignore="HardcodedText">

            <fontsmaterialuiux.cairoEditText
                android:id="@+id/id_email_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/email"
                android:textAlignment="center"
                android:textColor="@color/primarytext"
                android:textSize="18sp"
                tools:ignore="ContentDescription" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/id_view_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="23dp"
            android:background="@color/linecolor"
            android:contentDescription="For more visit www.materialuiux.com" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_Password_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="23dp"
            android:background="@null"
            android:contentDescription="For more visit www.materialuiux.com">

            <fontsmaterialuiux.cairoEditText
                android:id="@+id/id_password_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/primarytext"
                android:textSize="18sp"
                tools:ignore="ContentDescription" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/id_view_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="23dp"
            android:background="@color/linecolor"
            android:contentDescription="For more visit www.materialuiux.com" />

        <fontsmaterialuiux.cairoTextView
            android:id="@+id/id_forgetPassword_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="For more visit www.materialuiux.com"
            android:text="@string/forgot_password"
            android:textColor="@color/secondarytext"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <fontsmaterialuiux.cairoButton
            android:id="@+id/id_signIn_Button"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="@dimen/marign_16"
            android:layout_marginRight="23dp"
            android:background="@drawable/rectsignin"
            android:contentDescription="For more visit www.materialuiux.com"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/thirdtext"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <fontsmaterialuiux.cairoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marign_26"
            android:contentDescription="For more visit www.materialuiux.com"
            android:text="@string/orsigninusing"
            android:textColor="@color/secondarytext"
            android:textSize="@dimen/textsize_14" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marign_8"
            android:contentDescription="For more visit www.materialuiux.com"
            android:padding="@dimen/padding_16">

            <Button
                android:layout_width="@dimen/width_50"
                android:layout_height="@dimen/height_50"
                android:layout_marginLeft="@dimen/marign_22"
                android:layout_marginTop="@dimen/marign_4"
                android:layout_marginRight="@dimen/marign_22"
                android:layout_marginBottom="@dimen/marign_22"
                android:background="@drawable/ic_facebook_background"
                android:contentDescription="For more visit www.materialuiux.com"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="@dimen/width_50"
                android:layout_height="@dimen/height_50"
                android:layout_marginLeft="@dimen/marign_22"
                android:layout_marginTop="@dimen/marign_4"
                android:layout_marginEnd="@dimen/marign_22"
                android:layout_marginRight="@dimen/marign_22"
                android:layout_marginBottom="@dimen/marign_22"
                android:background="@drawable/ic_google_background"
                android:contentDescription="For more visit www.materialuiux.com"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="@dimen/width_50"
                android:layout_height="@dimen/height_50"
                android:layout_marginLeft="@dimen/marign_22"
                android:layout_marginTop="@dimen/marign_4"
                android:layout_marginEnd="@dimen/marign_22"
                android:layout_marginRight="@dimen/marign_22"
                android:layout_marginBottom="@dimen/marign_22"
                android:background="@drawable/ic_twitter_background"
                android:contentDescription="For more visit www.materialuiux.com"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <!-- Sign up  -->
    <fontsmaterialuiux.cairoTextView
        android:id="@+id/id_SignUP_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="18dp"
        android:contentDescription="For more visit www.materialuiux.com"
        android:text="@string/sign_up"
        android:textColor="@color/signupsignintextcolor"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold" />

</RelativeLayout>